--- a/exercicios/ex023/form006.html
+++ b/exercicios/ex023/form006.html
@@ -7,24 +7,27 @@
 </head>
 <body>
     <h1>Exemplos de Formulários</h1>
-    <form action="cadastro.php" method="post">
-        <p>
-            <label for="icor">Cor:</label>
-            <input type="color" name="cor" id="icor">
-        </p>
-        <p>
-            <label for="inivel">Nível de Sastifação</label>
-            <input type="range" name="nivel" id="inivel" min="1" max="10">
-        </p>
-        <p>
-            <label for="ifoto">Foto de Perfil:</label>
-            <input type="file" name="foto" id="ifoto">
-        </p>
-     
-        <p>
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Limpar">
-        </p>
+    <fieldset>
+        <legend>Dados</legend>
+        <form action="cadastro.php" method="post">
+            <p>
+                <label for="icor">Cor:</label>
+                <input type="color" name="cor" id="icor">
+            </p>
+            <p>
+                <label for="inivel">Nível de Sastifação</label>
+                <input type="range" name="nivel" id="inivel" min="1" max="10">
+            </p>
+            <p>
+                <label for="ifoto">Foto de Perfil:</label>
+                <input type="file" name="foto" id="ifoto">
+            </p>
+        
+            <p> 
+                <input type="submit" value="Enviar">
+                <input type="reset" value="Limpar">
+            </p>
+    </fieldset>
     </form>
 </body>
 </html>
