--- a/exercicios/ex023/form007.html
+++ b/exercicios/ex023/form007.html
@@ -48,6 +48,7 @@
                 <input type="submit" value="Enviar">
                 <input type="reset" value="Limpar">
             </p>
+        </form>
     </fieldset>
 </body>
 </html>
