--- a/exercicios/ex024/mq005/index.html
+++ b/exercicios/ex024/mq005/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Media query</title>
 </head>
 <body>
-    
+   <header>
+    <h1>Meu site</h1>
+    <menu>
+      <ul>
+        <li><a href="#">Opção 1</a></li>
+        <li><a href="#">Opção 2</a></li>
+        <li><a href="#">Opção 3</a></li>
+        <li><a href="#">Opção 4</a></li>
+        <li><a href="#">Opção 5</a></li>
+      </ul>  
+    </menu>
+   </header> 
+   <main>
+    <article>
+        <h2>Testando media query</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, eum, suscipit aut officia atque illum nulla veniam deserunt quibusdam error perferendis unde iure doloribus ea voluptate. Dolorem quo porro placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi repellat, inventore ex nostrum commodi blanditiis nulla doloremque, aspernatur explicabo hic soluta quas quia dolor magnam earum natus! Sit, aut quod? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque ipsam asperiores temporibus voluptate cupiditate molestias quisquam, voluptas sint dolores repellat! Et rerum autem in! Assumenda sit quae cumque illum ducimus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, eum, suscipit aut officia atque illum nulla veniam deserunt quibusdam error perferendis unde iure doloribus ea voluptate. Dolorem quo porro placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi repellat, inventore ex nostrum commodi blanditiis nulla doloremque, aspernatur explicabo hic soluta quas quia dolor magnam earum natus! Sit, aut quod? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque ipsam asperiores temporibus voluptate cupiditate molestias quisquam, voluptas sint dolores repellat! Et rerum autem in! Assumenda sit quae cumque illum ducimus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, eum, suscipit aut officia atque illum nulla veniam deserunt quibusdam error perferendis unde iure doloribus ea voluptate. Dolorem quo porro placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi repellat, inventore ex nostrum commodi blanditiis nulla doloremque, aspernatur explicabo hic soluta quas quia dolor magnam earum natus! Sit, aut quod? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque ipsam asperiores temporibus voluptate cupiditate molestias quisquam, voluptas sint dolores repellat! Et rerum autem in! Assumenda sit quae cumque illum ducimus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, eum, suscipit aut officia atque illum nulla veniam deserunt quibusdam error perferendis unde iure doloribus ea voluptate. Dolorem quo porro placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi repellat, inventore ex nostrum commodi blanditiis nulla doloremque, aspernatur explicabo hic soluta quas quia dolor magnam earum natus! Sit, aut quod? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque ipsam asperiores temporibus voluptate cupiditate molestias quisquam, voluptas sint dolores repellat! Et rerum autem in! Assumenda sit quae cumque illum ducimus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, eum, suscipit aut officia atque illum nulla veniam deserunt quibusdam error perferendis unde iure doloribus ea voluptate. Dolorem quo porro placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi repellat, inventore ex nostrum commodi blanditiis nulla doloremque, aspernatur explicabo hic soluta quas quia dolor magnam earum natus! Sit, aut quod? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque ipsam asperiores temporibus voluptate cupiditate molestias quisquam, voluptas sint dolores repellat! Et rerum autem in! Assumenda sit quae cumque illum ducimus?</p>
+    </article>
+   </main>
 </body>
 </html>
