--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/icone.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media-query.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Curiosisades de tecnologias</title>
 </head>
@@ -67,6 +68,13 @@
         <p>Site criado por <a href="https://github.com/Italo61-dev" target="_blank">Italo Sousa</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Cursoemvideo</a></p>
     </footer>
     <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
         function clickMenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
